@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-23T01:23:03Z",
+  "timestamp" : "2022-07-23T08:19:21Z",
   "count_outdated" : 408,
   "uniques_outdated" : 234,
-  "count" : 433,
-  "uniques" : 250,
+  "count" : 434,
+  "uniques" : 251,
   "clones" : [
     {
       "timestamp": "2022-07-09T00:00:00Z",
@@ -86,6 +86,13 @@
       "timestamp": "2022-07-22T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-23T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
